<resources>
    <string name="app_name">finalwork</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="notice">WDNMD STUDY!</string>
    <string name="class1">8:30-9:15</string>
    <string name="class2">9:25-10:10</string>
    <string name="class3">10:20-11:05</string>
    <string name="class4">11:15-12:00</string>
    <string name="class5">13:00-13:45</string>
    <string name="class6">13:55-14:40</string>
    <string name="class7">14:50-15:35</string>
    <string name="class8">15:45-16:30</string>
    <string name="class9">16:40-17:25</string>
    <string name="class10">18:30-19:15</string>
    <string name="class11">19:25-20:10</string>
    <string name="class12">20:20-21:05</string>
    <string name="btn_save_label">save</string>
</resources>
